--- a/Week_5/5A/Studenten/Studenten/Studenten.csproj
+++ b/Week_5/5A/Studenten/Studenten/Studenten.csproj
@@ -19,6 +19,8 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="xunit" Version="2.4.1" />
+      <PackageReference Include="xunit.core" Version="2.4.1" />
     </ItemGroup>
 
 </Project>
