--- a/Week_14/Week_14/Week_14.csproj
+++ b/Week_14/Week_14/Week_14.csproj
@@ -22,6 +22,11 @@
       <_ContentIncludedByDefault Remove="Views\IngeschrevenIn\Details.cshtml" />
       <_ContentIncludedByDefault Remove="Views\IngeschrevenIn\Edit.cshtml" />
       <_ContentIncludedByDefault Remove="Views\IngeschrevenIn\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\StudentCursussen\Create.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\StudentCursussen\Delete.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\StudentCursussen\Details.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\StudentCursussen\Edit.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\StudentCursussen\Index.cshtml" />
     </ItemGroup>
 
 </Project>
